--- a/web/style.css
+++ b/web/style.css
@@ -12,6 +12,13 @@ h1 {
     text-align: center;
     margin: 20px 0;
 }
+h1 a {
+    color: #007bff;
+    text-decoration: none;
+}
+h1 a:hover {
+    text-decoration: underline;
+}
 .controls {
     width: 90%;
     max-width: 800px;
@@ -20,14 +27,20 @@ h1 {
     align-items: center;
     margin: 20px 0;
 }
+.export, .search-bar {
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid #444;
+    font-size: 16px;
+    line-height: 24px;
+}
 .export {
     background-color: #007bff;
     color: #fff;
-    border: none;
-    padding: 10px 20px;
     cursor: pointer;
-    border-radius: 5px;
     flex-shrink: 0;
+    text-align: center;
+    border: none;
 }
 .export:hover {
     background-color: #0056b3;
@@ -35,13 +48,13 @@ h1 {
 .search-bar {
     flex-grow: 1;
     margin-left: 20px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #444;
     background-color: #333;
     color: #fff;
-    font-size: 16px;
-    max-width: 100%;
+    border-color: #444;
+}
+.search-bar:focus {
+    outline: none;
+    border-color: #007bff;
 }
 table {
     width: 90%;
@@ -62,6 +75,7 @@ th {
     cursor: pointer;
     background-color: #007bff;
     color: #fff;
+    border: none;
 }
 th.sort-asc::after {
     content: " \u2191";
